# DebtCrisis

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
Input_for_Paper/tables/: exuberance_vs_event_study_coefficients_regression_summary.tex
paper/: debt_crisis.tex  debt_crisis_pres.tex  task_paper.py
src/debt_crisis/: __init__.py  config.py  sandbox.ipynb  spreads.ipynb  utilities.py
src/debt_crisis/analysis/: task_analysis.py
src/debt_crisis/clean_financials/: clean_financials.py  clean_international_financials.py  task_clean_financials.py  task_clean_international_financials.py  task_validate_financials.py  validate_financials.py
src/debt_crisis/comparative_analysis/: comparative_analysis.py  task_comparative_analysis.py
src/debt_crisis/data_management/: __init__.py  task_data_management.py
src/debt_crisis/event_study_sentiment_index/: event_study_sentiment_index.py  task_event_study_sentiment_index.py
src/debt_crisis/final/: __init__.py  task_final.py
src/debt_crisis/gpt_sentiment_index/: gpt_index_analysis.py  gpt_sentiment_index.py  (+7 more)
tests/analysis/: test_model.py  test_predict.py
tests/clean_financials/: test_clean_financial.py  test_clean_financials.py
tests/data_management/: test_clean_data.py
tests/gpt_sentiment_index.py/: test_gpt_sentiment_index.py
tests/regression_analysis/: test_event_study.py  test_regression_analysis.py
tests/sentiment_index/: test_clean_sentiment_data.py
(+15 files in other folders)
