[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/debt_crisis/_version.py"

[tool.pytask.ini_options]
paths = ["./src/debt_crisis"]
pdbcls = "pdbp:Pdb"
filterwarnings = [
    "ignore::FutureWarning"
]


[tool.ruff]
target-version = "py311"
select = ["ALL"]
fix = true
fix-only = true # No linting errors will be reported
extend-ignore = [
    "S101",  # Use of `assert` detected.
    "ANN",  # Missing type annotations
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.nbqa.config]
black = "pyproject.toml"

[tool.nbqa.mutate]
black = 1


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]

[tool.yamlfix]
line_length = 88
none_representation = "null"

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.0"
en-core-web-sm = {version = "3.0.0", source = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"}
